crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__misc__I020-escape-character.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/misc/I020-escape-character
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "this is a '|' character\n" [Done]
outcome: Done
