crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__misc__I021-identifiers-can-start-with-numbers.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/misc/I021-identifiers-can-start-with-numbers
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "512x2 = 1024\n" [Continue]
> "512x2p2 = 1026\n" [Done]
outcome: Done
