crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__misc__I023-whitespace.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/misc/I023-whitespace
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "Hello!\n" [Continue]
> "World.\n" [Ended]
outcome: Ended
